# LinuxApplicationDevelopment2021

./: .clang-format  .gitignore  README.md
01_BuildReq/: README.md
02_BuildReq/: Makefile  README.md
02_TerminalProject/: README.md  file_window.cpp  file_window.h
03_Multifile/: Makefile  README.md  fun.c  outlib.h  prog.c
03_TerminalProject/: Makefile  README.md  file_show.cpp
04_Text/: README.md  randomize.sh
05_Debugging/: Makefile  README.md  correct_output_1.txt  correct_output_2.txt  main.cpp  range.cpp  range.h  scenario1.gdb  scenario2.gdb
06_TracingFencing/: Makefile  README.md  injection.c  move.c
06_TracingFencing/files/: some_PROTECTsome.py
07_Environmental/: CMakeLists.txt  README.md  rhasher.c
07_Environmental/tests/: test_1.txt  tests.sh
08_Regexps/: CMakeLists.txt  README.md  esub.cpp
08_Regexps/tests/: tests.sh
09_Testing/: CMakeLists.txt  README.md  buf.cpp  buf.h  test.cpp
10_I18n/: CMakeLists.txt  README.md  guess.c
10_I18n/po/: ru.po
11_Documenting/: CMakeLists.txt  Doxyfile.in  README.md  guess.cpp
11_Documenting/po/: ru.po
12_PatchInstall/: CMakeLists.txt  README.md  guess.cpp
